--- a/public/css/plugins.css
+++ b/public/css/plugins.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700;800;900&amp;display=swap");
 
@@ -27555,7 +27554,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-weight: 800!important;
+  font-weight: 800 !important;
   font-family: "Mulish", sans-serif;
   color: #282b2d;
   letter-spacing: -0.02em;
@@ -43057,9 +43056,10 @@ a {
   margin-bottom: 2.5rem;
 }
 
-.footer-menu-quick-link li+li{
+.footer-menu-quick-link li+li {
   margin-top: 0.9375rem;
 }
+
 .footer-menu-quick-link {
   padding-left: 44px;
   text-align: justify;
@@ -43316,102 +43316,125 @@ a:active {
   position: relative;
   right: 42px;
 }
+
 .new-text {
-    background: #47b729 none repeat scroll 0 0;
-    color: #fff;
-    padding: 2px 12px;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    top: 0;
-    z-index: 999;
+  background: #47b729 none repeat scroll 0 0;
+  color: #fff;
+  padding: 2px 12px;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  z-index: 999;
 }
+
 /* products */
 .section-header {
   margin-bottom: 50px;
   text-align: center;
 }
+
 .section-header h2 {
   color: #374048;
 }
+
 .section-header h2 {
   text-transform: uppercase;
   font: 600 48px / 29px "Poppins", sans-serif;
   padding-top: 5px;
   margin: 0 0 25px;
 }
+
 .section-header p {
   color: #969da3;
 }
+
 .section-header p {
   max-width: 710px;
   margin: 0 auto 20px;
   font: 300 20px / 32px "Poppins", sans-serif;
 }
+
 .section-header:after {
   background: #eee;
 }
-.bar{
+
+.bar {
   width: 82px;
   height: 6px;
   margin: 0 auto;
   background: #eee;
 }
+
 .section-header {
   margin-bottom: 50px;
   text-align: center;
 }
+
 .collections .item {
   padding: 15px;
   text-align: center;
 }
+
 .collections .item .featured-img {
   margin-bottom: 30px;
 }
+
 .collections .item .featured-img {
   margin-bottom: 30px;
 }
+
 .collections .item .title {
   color: #0084ff;
 }
+
 .collections .item .title {
   font: 500 16px / 1 "Poppins", sans-serif;
   margin: 0;
 }
+
 .collections .item .category {
   color: #b4bcc3;
 }
+
 .collections .item .category {
   margin: 5px 0 0;
   font: 300 13px / 1 "Poppins", sans-serif;
 }
+
 .collections .item .price {
   color: #f62;
 }
+
 .collections .item .price {
   font: 600 19px / 1 "Poppins", sans-serif;
   margin: 14px 0 20px;
 }
-.btn {
+
+.btn-item {
   border-radius: 30px;
   font: 300 12px / 26px "Poppins", sans-serif;
   padding: 2px 33px 0;
   color: #b4bcc3;
   border-color: #e1e4e7;
 }
+
 /* products choose */
 .product-box {
   background: #fff;
 }
+
 .product-box {
   max-width: 945px;
   margin: 0 auto;
   box-shadow: 0 0 62px rgba(0, 0, 0, .3);
   position: relative;
 }
+
 .product-box .mfp-close {
   color: #8a9095;
 }
+
 .product-box .mfp-close {
   position: absolute;
   font: 300 30px / 1 "Poppins", sans-serif;
@@ -43419,20 +43442,25 @@ a:active {
   opacity: .4;
   transition: all 300ms linear 0s;
 }
+
 .product-img-gallery {
   background: #f8f8f8;
 }
+
 .product-img-gallery {
   float: left;
   width: 457px;
 }
+
 #product-imgs {
   padding: 65px 0 68px;
   height: 100%;
 }
+
 .carousel {
   position: relative;
 }
+
 #product-imgs .carousel-indicators {
   bottom: 29px;
   display: table;
@@ -43443,6 +43471,7 @@ a:active {
   transform: translateX(-50%);
   margin: 0;
 }
+
 .carousel-indicators {
   position: absolute;
   bottom: 10px;
@@ -43454,15 +43483,18 @@ a:active {
   list-style: none;
   text-align: center;
 }
+
 #product-imgs .carousel-indicators li {
   background: #dadada;
 }
+
 #product-imgs .carousel-indicators li {
-    float: left;
-    width: 9px;
-    height: 9px;
-    margin: 0;
+  float: left;
+  width: 9px;
+  height: 9px;
+  margin: 0;
 }
+
 .carousel-indicators li {
   display: inline-block;
   width: 10px;
@@ -43475,26 +43507,32 @@ a:active {
   background-color: #000 \9;
   background-color: rgba(0, 0, 0, 0);
 }
+
 li {
   font: 300 14px / 26px "Poppins", sans-serif;
   color: #82898f;
 }
+
 .carousel-inner {
   position: relative;
   overflow: hidden;
   width: 100%;
 }
+
 #product-imgs .item {
   text-align: center;
 }
+
 #product-imgs .item img {
   display: inline-block;
   width: auto;
   max-width: 95%;
 }
+
 #product-imgs .item {
   text-align: center;
 }
+
 .product-desc {
   float: left;
   width: calc(100% - 457px);
@@ -43502,56 +43540,70 @@ li {
   overflow-x: hidden;
   overflow-y: visible;
 }
+
 .product-info {
   transition: all .8s ease-in-out;
   opacity: 1;
 }
+
 .product-desc .name {
   color: #848e96;
 }
+
 .product-desc .name {
   text-transform: uppercase;
   font: 400 20px / 1 "Poppins", sans-serif;
   margin: 0 0 8px;
 }
+
 .product-desc .edition {
   color: #374048;
 }
+
 .product-desc .edition {
   text-transform: uppercase;
   font: 700 33px / 1 "Poppins", sans-serif;
   margin: 0 0 10px;
 }
+
 .product-desc .model {
   color: #a8afb5;
 }
+
 .product-desc .model {
   text-transform: uppercase;
   font: 300 16px / 1 "Poppins", sans-serif;
   margin: 0 0 20px;
 }
+
 .product-desc .price {
   color: #0084ff;
 }
+
 .product-desc .price {
   font: 600 33px / 34px "Poppins", sans-serif;
   margin: 0 0 25px;
   text-transform: uppercase;
 }
+
 .product-desc .price del {
   color: #808890;
 }
+
 .product-desc .price del {
   font-size: 26px;
   font-weight: 300;
   margin-right: 14px;
 }
+
 .product-desc .price .label {
   background: #ff840f;
 }
+
 .product-desc .price .label {
   background: #ff840f;
 }
+
 .label {
   display: inline;
   padding: .2em .6em .3em;
@@ -43564,67 +43616,86 @@ li {
   vertical-align: baseline;
   border-radius: .25em;
 }
+
 .product-desc .price {
   color: #0084ff;
 }
+
 .product-desc .description {
   padding: 32px 0;
   border-top: 1px solid;
   border-bottom: 1px solid;
-}.product-desc .description p {
+}
+
+.product-desc .description p {
   color: #979a9d;
 }
+
 .product-desc .description p {
   font: 300 16px / 28px "Poppins", sans-serif;
   margin-bottom: 0;
 }
+
 .product-desc .choose-form .choose-options {
   border-color: #eee;
 }
+
 .product-desc .choose-form .choose-options {
   padding: 34px 0 36px;
   border-bottom: 1px solid;
 }
+
 .product-desc .choose-form .option {
   float: left;
 }
+
 .product-desc .choose-form .option .form-label {
   color: #6c6e71;
 }
+
 .product-desc .choose-form .option .form-label {
   text-transform: uppercase;
   margin: 0 0 12px;
   font: 500 16px / 1 "Poppins", sans-serif;
 }
+
 .product-desc .choose-form .option .colors {
   padding-top: 9px;
 }
+
 .product-desc .choose-form .option+.option {
   margin-left: 20px;
 }
+
 .product-desc .choose-form .option .form-label {
   color: #6c6e71;
 }
+
 .product-desc .choose-form .option .form-label {
   text-transform: uppercase;
   margin: 0 0 12px;
   font: 500 16px / 1 "Poppins", sans-serif;
 }
+
 .product-desc .bootstrap-touchspin {
   width: 86px;
 }
+
 .input-group {
   position: relative;
   display: table;
   border-collapse: separate;
 }
+
 .input-group-addon:first-child {
   border-right: 0;
 }
+
 .product-desc .choose-form .bootstrap-touchspin input {
   border-color: #e0e8ee;
   background: 0 0;
 }
+
 .product-desc .bootstrap-touchspin input {
   width: 48px;
   box-shadow: none;
@@ -43633,6 +43704,7 @@ li {
   text-align: center;
   border-right: 0;
 }
+
 .input-group-addon {
   padding: 6px 12px;
   font-size: 14px;
@@ -43644,73 +43716,101 @@ li {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+
 .product-desc .bootstrap-touchspin {
   width: 86px;
 }
+
 .input-group {
   position: relative;
   display: table;
   border-collapse: separate;
 }
+
 .product-desc .choose-form .option+.option {
   margin-left: 20px;
 }
+
 .product-desc .choose-form .option {
   float: left;
 }
+
 .product-desc .choose-form .option .form-label {
   color: #6c6e71;
 }
+
 .product-desc .choose-form .option .form-label {
   text-transform: uppercase;
   margin: 0 0 12px;
   font: 500 16px / 1 "Poppins", sans-serif;
 }
+
 .product-desc .choose-form .choose-options {
   border-color: #eee;
 }
+
 .product-desc .choose-form .choose-options {
   padding: 34px 0 36px;
   border-bottom: 1px solid;
 }
+
 .product-desc .choose-form .option {
   float: left;
 }
+
 .product-desc .choose-form .option .form-label {
   color: #6c6e71;
 }
+
 .product-desc .choose-form .option .form-label {
   text-transform: uppercase;
   margin: 0 0 12px;
   font: 500 16px / 1 "Poppins", sans-serif;
 }
+
 .product-desc .choose-form .option .form-label {
   text-transform: uppercase;
   margin: 0 0 12px;
   font: 500 16px / 1 "Poppins", sans-serif;
 }
-.product-desc .choose-form .option input[name=color], .product-desc .choose-form .option input[name=os0] {
+
+.product-desc .choose-form .option input[name=color],
+.product-desc .choose-form .option input[name=os0] {
   display: none;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-1], .product-desc .choose-form .option input[name=os0]+label[for=color-1] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-1],
+.product-desc .choose-form .option input[name=os0]+label[for=color-1] {
   background: #2eafff;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-1], .product-desc .choose-form .option input[name=os0]+label[for=color-1] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-1],
+.product-desc .choose-form .option input[name=os0]+label[for=color-1] {
   margin-left: 4px;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-1], .product-desc .choose-form .option input[name=os0]+label[for=color-1] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-1],
+.product-desc .choose-form .option input[name=os0]+label[for=color-1] {
   margin-left: 4px;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-2], .product-desc .choose-form .option input[name=os0]+label[for=color-2] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-2],
+.product-desc .choose-form .option input[name=os0]+label[for=color-2] {
   background: #5c2eff;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-2], .product-desc .choose-form .option input[name=os0]+label[for=color-2] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-2],
+.product-desc .choose-form .option input[name=os0]+label[for=color-2] {
   background: #5c2eff;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-3], .product-desc .choose-form .option input[name=os0]+label[for=color-3] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-3],
+.product-desc .choose-form .option input[name=os0]+label[for=color-3] {
   background: #ff2e99;
 }
-.product-desc .choose-form .option input[name=color]+label, .product-desc .choose-form .option input[name=os0]+label {
+
+.product-desc .choose-form .option input[name=color]+label,
+.product-desc .choose-form .option input[name=os0]+label {
   width: 27px;
   height: 27px;
   border-radius: 100%;
@@ -43718,10 +43818,14 @@ li {
   margin-right: 6px;
   margin-bottom: 0;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-4]:before, .product-desc .choose-form .option input[name=os0]+label[for=color-4]:before {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-4]:before,
+.product-desc .choose-form .option input[name=os0]+label[for=color-4]:before {
   border-color: #ffe62e;
 }
-.product-desc .choose-form .option input[name=color]+label:before, .product-desc .choose-form .option input[name=os0]+label:before {
+
+.product-desc .choose-form .option input[name=color]+label:before,
+.product-desc .choose-form .option input[name=os0]+label:before {
   content: '';
   width: 39px;
   height: 39px;
@@ -43732,16 +43836,24 @@ li {
   border: 0 solid;
   border-radius: 100%;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-4]:before, .product-desc .choose-form .option input[name=os0]+label[for=color-4]:before {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-4]:before,
+.product-desc .choose-form .option input[name=os0]+label[for=color-4]:before {
   border-color: #ffe62e;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-4], .product-desc .choose-form .option input[name=os0]+label[for=color-4] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-4],
+.product-desc .choose-form .option input[name=os0]+label[for=color-4] {
   background: #ffe62e;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-5]:before, .product-desc .choose-form .option input[name=os0]+label[for=color-5]:before {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-5]:before,
+.product-desc .choose-form .option input[name=os0]+label[for=color-5]:before {
   border-color: #2effa1;
 }
-.product-desc .choose-form .option input[name=color]+label:before, .product-desc .choose-form .option input[name=os0]+label:before {
+
+.product-desc .choose-form .option input[name=color]+label:before,
+.product-desc .choose-form .option input[name=os0]+label:before {
   content: '';
   width: 39px;
   height: 39px;
@@ -43752,34 +43864,44 @@ li {
   border: 0 solid;
   border-radius: 100%;
 }
-.product-desc .choose-form .option input[name=color]+label[for=color-5], .product-desc .choose-form .option input[name=os0]+label[for=color-5] {
+
+.product-desc .choose-form .option input[name=color]+label[for=color-5],
+.product-desc .choose-form .option input[name=os0]+label[for=color-5] {
   background: #2effa1;
 }
+
 .product-desc .choose-form .option+.option {
   margin-left: 20px;
 }
+
 .product-desc .choose-form .option {
   float: left;
 }
+
 .product-desc .choose-form .option .form-label {
   color: #6c6e71;
 }
+
 .product-desc .choose-form .option .form-label {
   text-transform: uppercase;
   margin: 0 0 12px;
   font: 500 16px / 1 "Poppins", sans-serif;
 }
+
 .product-desc .bootstrap-touchspin {
   width: 86px;
 }
+
 .input-group {
   position: relative;
   display: table;
   border-collapse: separate;
 }
+
 .input-group-addon:first-child {
   border-right: 0;
 }
+
 .bootstrap-touchspin .input-group-btn-vertical {
   position: relative;
   white-space: nowrap;
@@ -43787,9 +43909,11 @@ li {
   vertical-align: middle;
   display: table-cell;
 }
+
 .product-desc .choose-form .bootstrap-touchspin button {
   border-color: #e0e8ee;
 }
+
 .product-desc .bootstrap-touchspin .input-group-btn-vertical button {
   border-radius: 0;
   width: 38px;
@@ -43797,9 +43921,11 @@ li {
   padding: 0;
   margin-left: 0;
 }
+
 .product-desc .choose-form .bootstrap-touchspin button {
   border-color: #e0e8ee;
 }
+
 .product-desc .bootstrap-touchspin .input-group-btn-vertical button {
   border-radius: 0;
   width: 38px;
@@ -43807,13 +43933,20 @@ li {
   padding: 0;
   margin-left: 0;
 }
+
 #product-imgs {
   padding: 65px 0 68px;
   height: 100%;
 }
+
 .mfp-container:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
+}
+
+.items-collection {
+  border: 1px solid #f1f1f1;
+  border-radius: 12px;
 }
